[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "SC2Spa"
version = "1.0"
authors = [
  { name="Linbu Liao", email="linbu.liao@gmail.com" },
]
description = "SC2Spa: a deep learning based approach to map transcriptome to spatial origins at cellular resolution"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/linbuliao/SC2Spa"
"Bug Tracker" = "https://github.com/pypa/SC2Spa/issues"

